src/scss/components/_results-panel.scss
.results-panel {
  width: 26.5rem;
  height: 100%;
  padding: 1rem 0 1rem 0;
  margin-right: 1rem;
  overflow-y: hidden;
  overflow-x: hidden;

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 1rem 1rem 1rem;
    gap: 1rem;

    &--download {
      justify-content: center;
    }
  }

  &__button {
    width: 100%;
    .mdc-button__label {
      display: flex !important;
      align-items: center !important;
      gap: 0.5rem;
    }
  }

  &__number {
    font-size: 1.25rem;
    font-weight: 600;
    margin: 0 0 0 0.5rem;
  }
}

.viewport {
  // set viewport height to display cards
  height: calc(100vh - 10rem - 122px);
  width: 26.5rem;
}

